# casual-data-viz

./: README.md  data_sci.yml  pyproject.toml  test  test.cu  test.py  test_pytorch.py
data/: net_migration.csv
data/fc_valuations/: fc_valuations.csv
models/: models.pkl
notebooks/: animate.py  front-end.py  ke_crime_analysis_2010_21.ipynb  ken_aus_net-migration.ipynb  marathon_progression.ipynb  sportico.ipynb  trump_media.ipynb  visualise.py
