[tool.poetry]
name = "casual-data-viz"
version = "0.1.0"
description = "Fun data visualizations on various interesting subjects"
authors = ["LibranTechie <info@libranconsult.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
notebook = "^7.0.8"
ipykernel = "^6.29.2"
plotly = "^5.18.0"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
